# backend/src/main/java/com/lolchievement/domain/model/Player.java
@@ -1,0 +1,14 @@
+package com.lolchievement.domain.model;
+
+import lombok.Builder;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+
+@Data
+@Builder
+@EqualsAndHashCode
+public class Player {
+    private String id;
+    private String gameName;
+    private String tagLine;
+}
